# async-openai

./: Cargo.toml  rustfmt.toml
async-openai/: Cargo.toml  rustfmt.toml
async-openai/src/: embedding.rs  error.rs  file.rs  lib.rs  vector_store_files.rs
async-openai/src/types/: assistant.rs  audio.rs  audit_log.rs  batch.rs  chat.rs  common.rs  completion.rs  embedding.rs  file.rs  fine_tuning.rs  image.rs  invites.rs  message.rs  metadata.rs  moderation.rs  project_api_key.rs  project_service_account.rs  project_users.rs  projects.rs  responses.rs  run.rs  step.rs  thread.rs  upload.rs  users.rs  vector_store.rs
async-openai/src/types/assistants/: api.rs  assistant.rs  message.rs  run.rs  step.rs  stream.rs  thread.rs
async-openai/src/types/audio/: audio_.rs  stream.rs
async-openai/src/types/batches/: api.rs  batch.rs
async-openai/src/types/chat/: api.rs  chat_.rs
async-openai/src/types/chatkit/: api.rs  session.rs  thread.rs
async-openai/src/types/completions/: completion.rs
async-openai/src/types/containers/: api.rs  container.rs
async-openai/src/types/embeddings/: embedding.rs
async-openai/src/types/evals/: api.rs  eval.rs
async-openai/src/types/files/: api.rs  file.rs
async-openai/src/types/finetuning/: api.rs  fine_tuning.rs
async-openai/src/vectorstores/: vector_store_files.rs
async-openai/tests/: boxed_future.rs
docs/: UTOIPA_ANNOTATIONS.md
docs/utoipa-annotations/: README.md
scripts/: README.md  add_utoipa_annotations.py
scripts/add-utoipa-annotations/: Cargo.toml
scripts/add-utoipa-annotations/src/: main.rs
(+72 files in other folders)
