[package]
name = "add-utoipa-annotations"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit", "visit-mut"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
walkdir = "2.5"
anyhow = "1.0"